--- a/visibility.html
+++ b/visibility.html
@@ -23,6 +23,14 @@
 
         #box-3 {
             background-color: rgb(14, 156, 90);
+            /* visibility: hidden; */
+            /* visibility: visible; */
+            /* display: none; */
+            display: block;
+        }
+
+        #box-4 {
+            background-color: springgreen;
         }
     </style>
 </head>
@@ -31,6 +39,7 @@
     <div class="box" id="box-1"></div>
     <div class="box" id="box-2"></div>
     <div class="box" id="box-3"></div>
+    <div class="box" id="box-4"></div>
 </body>
 
 </html>
